--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,5 @@ server/djangoapp/migrations/
 *.pyc
 server/djangoapp/migrations/
 
+server/.devcontainer/devcontainer.json
+.devcontainer/devcontainer.json
